# mlops-text-classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  serve.yaml
deploy/: Dockerfile  api.py
deploy/workloads/: ci.sh
requirments/: dev.txt  prod.txt
src/: infer.py
tests/code/: test_api.py  test_infer.py  test_utils.py
tests/model/: test_behavioral .py
text2speech/: infer.py  logger_configure.py  utils.py
