[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "text2speech"
version = "0.0.1" 

dependencies = [
  "transformers==4.31.0",
  "datasets==2.14.4",
  "torch==2.0.1",
  "SentencePiece==0.1.99",
  "fastapi==0.103.1",
  "uvicorn==0.23.2",
  "num2words==0.5.12"
]

[project.optional-dependencies] # Optional
dev = [
  "black==23.7.0",
  "isort==5.12.0",
  "flake8==6.1.0",
  "pre-commit==3.3.3",
  "iPython"
]

test = [
  "coverage"
]


# black formatting
[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

